# skin-tone-extraction

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  README_package.md  pyproject.toml
.github/workflows/: ci-tests.yaml  lint.yaml
res_code/skin_tone/: __init__.py  __main__.py  batch_extract.py  dataset.py  extract.py  extraction.py  helpers.py  image_collection.py  visualizer.py
res_code/skin_tone/methods/: krishnapriya.py  merler.py  overall.py  thong.py
skin_tone_extraction/: __main__.py  extract.py  extraction.py  helpers.py  image.py  image_collection.py  metrics.py
skin_tone_extraction/methods/: krishnapriya.py  merler.py  overall.py  thong.py
tests/: test_extract.py  test_image_collection.py  test_main.py  test_visualizer.py
tests/__snapshots__/: test_extract.ambr
tests/skin_tone/: test_extract.py  test_image_collection.py  test_main.py  test_visualizer.py
